# bmcs_cross_section

./: .dockerignore  .gitignore  DEPLOYMENT_GUIDE.md  Dockerfile  OO_PLOTTING_REFACTORING.md  README.md  environment_scite.yml  pyproject.toml  setup.py
bmcs_cross_section/core/: __init__.py  symbolic.py
bmcs_cross_section/cs_components/: __init__.py  carbon_bars.py  catalog_manager.py  component_base.py  concrete_catalog.py  steel_rebars.py  textile_products.py
bmcs_cross_section/cs_design/: __init__.py  cross_section.py  reinforcement.py  shapes.py
bmcs_cross_section/matmod/: carbon_reinforcement.py  ec2_concrete.py
bmcs_cross_section/nm_assess/: __init__.py  nm_assessment.py
bmcs_cross_section/pullout/: pullout_sim.py
bmcs_cross_section/streamlit_app/: bending_analysis_view.py  cross_section_view.py  scite_app.py
concepts/: 01_failure_criteria_mkappa.md  02_continuous_beam.md  07_deflection_migration.md  08_floor_system_refactoring.md  09_unit_system.md
dev_docs/: DOCKER_DEPLOYMENT.md  MATERIAL_ARCHITECTURE_EXAMPLE.md  MATERIAL_ARCHITECTURE_QUICKREF.md  MATERIAL_ARCHITECTURE_STRATEGY.md  README.md  STATE_MANAGEMENT_STRATEGY.md  material_architecture.puml  material_flow_diagram.puml
dev_docs/phase_1_core_and_matmod/: CLEANUP_CHECKLIST.md  DAY_1_SUMMARY.md  PROGRESS.md  README.md
dev_docs/phase_2_cs_design/: README.md
dev_docs/strategic/: MATERIAL_STRENGTH_MAPPING_ARCHITECTURE.md
notebooks/dev/: 00_test_core_module.ipynb  01_test_ui_adapters.ipynb  02_ec2_concrete_model.ipynb  03_steel_reinforcement_model.ipynb  04_cross_section_shapes.ipynb  05_reinforcement_layers.ipynb  06_cross_section_assembly.ipynb  07_phase2_validation.ipynb  08_reinforcement_component_catalogue.ipynb  09_using_component_catalogs.ipynb  10_cs_design_with_catalog_components.ipynb  11_reinforcement_catalog_integration.ipynb  12_catalog_caching_demo.ipynb  13_stress_strain_profile_validation.ipynb  14_stress_strain_profile_demo.ipynb  15_mkappa_refactored.ipynb  16_mkappa_interactive_state_visualization.ipynb  17_mkappa_equilibrium_investigation.ipynb  18_nm_assessment_demo.ipynb  19_nm_interactive_equilibrium.ipynb  20_nm_assessment_verification.ipynb  ASSESSMENT_CONTEXT_CONCEPT.md  COMPONENT_CATALOG_INTEGRATION.md  DAY5_STEEL_SUMMARY.md  README.md  README_STREAMLIT.md  REINFORCEMENT_LAYER_DESIGN.md  THREE_LAYER_ARCHITECTURE_DIAGRAM.md  component_catalog_app.py  cross_section_design_app.py  cross_section_design_app_old.py  ec2_concrete_streamlit_app.py  steel_reinforcement_streamlit_app.py  test_carbon_material.py
notebooks/mkappa/: mkappa_verification.ipynb  moment_curvature.ipynb  testing_material_laws.ipynb
notebooks/pullout/: pullout_frp_sim.ipynb  pullout_multilinear.ipynb
notebooks/temp/: comparison_MKappa.ipynb
notebooks/wb_tessellation/: demonstrator_mk_analysis.ipynb
scite/: api.py
scite/beam/: __init__.py  api.py
scite/bending_design/: __init__.py  rc_bending_app.ipynb  rc_bending_app.py  rc_bending_derive_mn.py  rc_bending_model_mn.py  rc_bending_unbalanced_model.py  rc_bending_widget_mn.py
scite/core/: __init__.py  model.py  symbolic.py  types.py
scite/cs_components/: CACHING_SYSTEM.md  __init__.py  carbon_bars.py  catalog_manager.py  (+5 more)
scripts/: README.md  deploy.sh  restart.sh  restart_scite_app.sh  run.sh  run_scite_app.sh  setup.sh
(+123 files in other folders)
